neue aktuelle codes mit neuer seite zum hochladen

--- a/frontend/src/container_bearbeiten.html
+++ b/frontend/src/container_bearbeiten.html
@@ -14,10 +14,11 @@
       👤 Mein Profil
     </div>
     <div class="menu-items" id="menu">
-      <a href="index.html">Dashboard</a>
       <a href="#">Profil bearbeiten</a>
-      <a href="#">Container hinzufügen</a>
+      <a href="#">Dashboard anzeigen</a>
+      <a href="container_hochladen.html">Container hinzufügen</a>
       <a href="dicom_upload.html">DICOM upload</a>
+      <a href="index.html">Abmelden</a>
     </div>
   </div>
 
