--- a/frontend/src/dicom_upload.html
+++ b/frontend/src/dicom_upload.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chat</title>
+  <title>DICOM upload</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -16,8 +16,9 @@
     <div class="menu-items" id="menu">
       <a href="#">Profil bearbeiten</a>
       <a href="#">Dashboard anzeigen</a>
-      <a href="#">Container hinzufügen</a>
+      <a href="container_hochladen.html">Container hinzufügen</a>
       <a href="container_bearbeiten.html">Container bearbeiten</a>
+      <a href="index.html">Abmelden</a>
     </div>
   </div>
 
@@ -27,12 +28,20 @@
     <p>Hier kannst du eine DICOM Datei hochladen.</p>
   </div>
 
-  <div class="chat-input-container"> <!-- Hier die Klasse geändert -->
-    <input type="text" id="input-text" placeholder="Hier Text eingeben..." />
+  <div class="chat-input-container">
+    <!-- Nur noch Datei-Upload und die neue Rollenliste -->
     <input type="file" id="file-input" accept=".dicom, .dcm" />
-    <button id="send-button">⬆️</button> <!-- Oder ein schickes Icon -->
+
+    <button id="send-button">⬆️</button>
   </div>
-  
+  <!----falls drag n drop
+  <div class="upload-container">
+    <div class="drag-drop-area">
+      <span>Drop here</span>
+    </div>
+  </div>
+  -->
+
   <script src="script.js"></script>
 
 </body>
