--- a/frontend/src/dicom_upload.html
+++ b/frontend/src/dicom_upload.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DICOM upload</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="dicom_styles.css" /> <!-- Neue CSS-Datei für dicom -->
 </head>
 <body>
 
