--- a/frontend/src/container_hochladen.html
+++ b/frontend/src/container_hochladen.html
@@ -28,7 +28,7 @@
   </header>
 
   <main>
-    <form id="upload-form" action="/upload" method="POST" enctype="multipart/form-data" class="upload-form">
+    <form id="upload-form" method="POST" enctype="multipart/form-data" class="upload-form">
       <input type="text" class="upload-input" name="image_id" placeholder="Image ID" required />
       <input type="text" class="upload-input" name="image_name" placeholder="Image Name" required />
       <input type="text" class="upload-input" name="tag" placeholder="Image Tag" required />
@@ -49,10 +49,13 @@
         <option value="windows">Windows</option>
       </select>
     
-      <input type="file" class="upload-input" name="container-file" accept=".tar,.zip" required />
+      <!-- <input type="file" class="upload-input" name="container-file" accept=".tar,.zip" required /> -->
       <button type="submit" class="upload-button">Hochladen</button>
     </form>
     
+    <!-- GET-->
+    <div id="ki-list-display" class="ki-display-area"></div>
+
   </main>
 
   <script src="script.js"></script>
