--- a/frontend/src/container_hochladen.html
+++ b/frontend/src/container_hochladen.html
@@ -29,6 +29,7 @@
 
   <main>
     <form id="upload-form" method="POST" enctype="multipart/form-data" class="upload-form">
+      <form action="http://localhost:8000//add-KIimage" method="POST" enctype="multipart/form-data">
       <input type="text" class="upload-input" name="image_id" placeholder="Image ID" required />
       <input type="text" class="upload-input" name="image_name" placeholder="Image Name" required />
       <input type="text" class="upload-input" name="tag" placeholder="Image Tag" required />
