--- a/frontend/src/container_hochladen.html
+++ b/frontend/src/container_hochladen.html
@@ -28,7 +28,7 @@
   </header>
 
   <main>
-    <form id="upload-form" method="POST" enctype="multipart/form-data" class="upload-form">
+    <form id="upload-form" method="POST" class="upload-form">
       <input type="text" class="upload-input" name="image_id" placeholder="Image ID" required />
       <input type="text" class="upload-input" name="image_name" placeholder="Image Name" required />
       <input type="text" class="upload-input" name="tag" placeholder="Image Tag" required />
@@ -54,7 +54,7 @@
     </form>
     
     <!-- GET-->
-    <div id="ki-list-display" class="ki-display-area"></div>
+    <!-- <div id="ki-list-display" class="ki-display-area"></div> -->
 
   </main>
 
