--- a/frontend/src/container_hochladen.html
+++ b/frontend/src/container_hochladen.html
@@ -56,7 +56,7 @@
       <button type="submit" class="upload-button">Hochladen</button>
       <div id="ki-list-display" class="ki-display-area"></div>
       <button onclick="loadKIImages()">Alle KI-Images anzeigen</button>
-
+      <!-- <button type="button" id="load-button">Alle KI-Images anzeigen</button> -->
     </form>
     
   </main>
