--- a/frontend/src/pages/dashboard.html
+++ b/frontend/src/pages/dashboard.html
@@ -13,7 +13,7 @@
       <a class="active" href="#">Dashboard</a>
       <a href="container_upload.html">Container hochladen</a>
       <a href="dicom_upload.html">DICOM hochladen</a>
-      <a href="#">Profile</a>
+      <a href="#">Profil</a>
     </div>
     <div class="logout">
         <a href="login.html">Logout</a>
@@ -73,8 +73,10 @@
         <p><span class="status-dot active"></span> Active</p>
       </div>
     </div>
+    
   </main>
 
   <footer>© mRay</footer>
+  <script src="dashboard.js"></script>
 </body>
 </html>
