--- a/frontend/src/pages/dicom_upload.html
+++ b/frontend/src/pages/dicom_upload.html
@@ -13,7 +13,7 @@
       <a href="dashboard.html">Dashboard</a>
       <a href="container_upload.html">Container hochladen</a>
       <a href="#" class="active">DICOM hochladen</a>
-      <a href="#">Profile</a>
+      <a href="#">Profil</a>
     </div>
     <div class="logout">
         <a href="login.html">Logout</a>
