docker compose: health check für DB Javascript: routen korrigiert

--- a/frontend/src/pages/container_upload.html
+++ b/frontend/src/pages/container_upload.html
@@ -57,7 +57,7 @@
       document.getElementById("upload-hub").style.display = type === "hub" ? "flex" : "none";
     }
   </script>
-  <script src="upload_container.js"></script>
+  <script src="container_upload.js"></script>
 
 </body>
 </html>
