--- a/frontend/src/pages/container_upload.html
+++ b/frontend/src/pages/container_upload.html
@@ -15,6 +15,9 @@
       <a href="dicom_upload.html">DICOM Upload</a>
       <a href="#">Profil</a>
     </div>
+    <div class="logout">
+      <a href="login.html">Logout</a>
+    </div>
   </nav>
 
   <main>
@@ -34,7 +37,7 @@
 
     <div id="upload-local" class="upload-section">
       <form id="local-upload-form">
-        <input type="file" name="local_file" required />
+        <input type="file" name="file" required />
         <button type="submit">Hochladen</button>
         <div id="local-status" class="upload-status"></div>
       </form>
