--- a/frontend/src/pages/dashboard.html
+++ b/frontend/src/pages/dashboard.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>mRay Dashboard</title>
   <link rel="stylesheet" href="../styles/dashboard.css" />
-  
+
 </head>
 
 <body>
@@ -38,7 +39,7 @@
 
   <footer>© mRay</footer>
 
-  <!-- Modal -->
+ <!-- Modal -->
   <div id="delete-modal" class="modal hidden">
     <div class="modal-content">
       <p>Möchtest du dieses KI-Image wirklich löschen?</p>
@@ -47,7 +48,9 @@
         <button id="cancel-delete">Abbrechen</button>
       </div>
     </div>
-  </div>
+  </div> 
 
+  <script src="dashboard.js"></script>
 </body>
+
 </html>
