--- a/frontend/src/pages/dashboard.html
+++ b/frontend/src/pages/dashboard.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>mRay Dashboard</title>
   <link rel="stylesheet" href="../styles/dashboard.css" />
-
 </head>
 
 <body>
@@ -25,7 +24,18 @@
 
   <main>
     <h1 class="section-title">KI-Images</h1>
-    <div class="dashboard-container">
+
+    <div class="dashboard-container vertical-layout">
+      <div class="filter-controls">
+        <select id="filterSelect">
+          <option value>🔽 Filtern nach...</option>
+          <option value="image_name">🔤 Name</option>
+          <option value="image_tag">🏷 Tag</option>
+          <option value="created_at">⏱ Hochgeladen am</option>
+        </select>
+
+        <input type="text" id="searchInput" placeholder="🔍 Suchbegriff eingeben..." />
+      </div>
       <div class="table-wrapper" id="ki-image-list">
         <p>Lade KI-Images...</p>
       </div>
@@ -35,20 +45,10 @@
         <p>Hier erscheinen alle hochgeladenen KI-Images.</p>
       </div>
     </div>
+
   </main>
 
   <footer>© mRay</footer>
-
- <!-- Modal -->
-  <div id="delete-modal" class="modal hidden">
-    <div class="modal-content">
-      <p>Möchtest du dieses KI-Image wirklich löschen?</p>
-      <div class="modal-buttons">
-        <button id="confirm-delete">🗑 Ja, löschen</button>
-        <button id="cancel-delete">Abbrechen</button>
-      </div>
-    </div>
-  </div> 
 
   <script src="dashboard.js"></script>
 </body>
