--- a/frontend/src/pages/container_upload.html
+++ b/frontend/src/pages/container_upload.html
@@ -40,6 +40,7 @@
         <input type="file" name="file" required />
         <button type="submit">Hochladen</button>
         <div id="local-status" class="upload-status"></div>
+        <progress id="local-progress" value="0" max="100" style="width: 100%; display: none;"></progress>
       </form>
     </div>
 
