--- a/frontend/src/pages/dicom_upload.html
+++ b/frontend/src/pages/dicom_upload.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DICOM Upload – mRay AIR</title>
   <link rel="stylesheet" href="../styles/dicom_upload.css" />
 </head>
+
 <body>
   <nav class="navbar">
     <div class="logo">mRay AIR</div>
@@ -16,9 +18,9 @@
       <a href="#">Profil</a>
     </div>
     <div class="logout">
-        <a href="login.html">Logout</a>
-      </div>
-      
+      <a href="login.html">Logout</a>
+    </div>
+
   </nav>
 
   <main>
@@ -27,7 +29,10 @@
     <div class="form-container">
       <form id="dicom-form">
         <label for="dicom_file">DICOM Datei auswählen</label>
-        <input type="file" id="dicom_file" name="dicom_file" accept=".dcm" required />
+        <div class="drop-zone" id="drop-dicom">
+          <span id="dicom-drop-text">📂 DICOM-Datei hierher ziehen oder klicken</span>
+          <input type="file" id="dicom_file" name="dicom_file" accept=".dcm"  />
+        </div>
         <button type="submit">Hochladen</button>
         <div id="dicom-status" class="upload-status"></div>
       </form>
@@ -47,4 +52,5 @@
 
   <script src="dicom_upload.js"></script>
 </body>
+
 </html>
