--- a/frontend/src/pages/login.html
+++ b/frontend/src/pages/login.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login – mRay AIR</title>
+
+  <link rel="stylesheet" href="../styles/global_style.css" />
   <link rel="stylesheet" href="../styles/login.css" />
 </head>
 <body>
@@ -30,7 +32,7 @@
     document.getElementById("login-form").addEventListener("submit", function (e) {
       e.preventDefault();
       // Hier kannst du optional auch Username/Passwort prüfen
-      window.location.href = "dicom_upload.html";
+      window.location.href = "dashboard.html";
     });
   </script>
 </body>
