--- a/frontend/src/pages/register.html
+++ b/frontend/src/pages/register.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registrieren – mRay AIR</title>
+
+  <link rel="stylesheet" href="../styles/global_style.css" />
   <link rel="stylesheet" href="../styles/login.css" />
 </head>
 <body>
@@ -30,7 +32,7 @@
     <footer>© mRay</footer>
   </div>
 
-  <script src="register.js"></script>
+  <script src="../scripts/register.js"></script>
 
 </body>
 </html>
