Upload File from System fixed

--- a/frontend/src/pages/container_upload.html
+++ b/frontend/src/pages/container_upload.html
@@ -33,7 +33,7 @@
       <form id="local-upload-form">
         <div class="drop-zone" id="drop-local">
           <span>📂 Container (.tar) hierher ziehen oder klicken</span>
-          <input type="file" name="file" id="fileInput-local" />
+          <input type="file" name="file" id="fileInput-local" accept=".tar" hidden />
         </div>
 
         <button type="submit">Hochladen</button>
