--- a/frontend/src/pages/dicom_upload.html
+++ b/frontend/src/pages/dicom_upload.html
@@ -21,7 +21,7 @@
         <label for="dicom_file">DICOM Datei auswählen</label>
         <div class="drop-zone" id="drop-dicom">
           <span id="dicom-drop-text">📂 DICOM-Datei hierher ziehen oder klicken</span>
-          <input type="file" id="dicom_file" name="dicom_file" accept=".dcm"  />
+          <input type="file" id="dicom_file" name="dicom_file" accept=".dcm" hidden/>
         </div>
         <button type="submit">Hochladen</button>
         <div id="dicom-status" class="upload-status"></div>
