--- a/frontend/src/pages/dashboard.html
+++ b/frontend/src/pages/dashboard.html
@@ -41,7 +41,7 @@
 
   <footer>© mRay</footer>
 
-  <script src="../scripts/dashboard.js"></script>
+  <script src="../scripts/dashboard.js?v=20250517"></script>
   <script src="../scripts/global_script.js"></script>
 
 </body>
