--- a/frontend/src/pages/user/user.html
+++ b/frontend/src/pages/user/user.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>User Bereich</h1>
+  <h3 id="greeting"></h3>
   <button onclick="logout()">Logout</button>
   <a href="http://localhost:8090/realms/imblue-realm/account" target="_blank">Profil bearbeiten</a>
 </body>
