--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,6 @@
   <script src="index.js" defer></script>
 </head>
 <body>
-  <h1>Weiterleitung wird durchgeführt ...</h1>
+  <h1>Weiterleitung wird durchgeführt ....</h1>
 </body>
 </html>
