--- a/frontend/src/pages/provider/provider.html
+++ b/frontend/src/pages/provider/provider.html
@@ -2,12 +2,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Provider Bereich</title>
+  <title>Provider</title>
   <script src="https://cdn.jsdelivr.net/npm/keycloak-js@24.0.1/dist/keycloak.min.js"></script>
   <script src="provider.js" defer></script>
 </head>
 <body>
-  <h1>Provider Dashboard</h1>
+  <h1>Provider Bereich</h1>
+  <h3 id="greeting"></h3>
   <button onclick="logout()">Logout</button>
   <a href="http://localhost:8090/realms/imblue-realm/account" target="_blank">Profil bearbeiten</a>
 </body>
