--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta http-equiv="refresh" content="0; url=./pages/login.html" />
-    <title>Redirecting...</title>
-  </head>
-  <body>
-    <p>Redirecting to login...</p>
-  </body>
+<!-- frontend/index.html-->
+ <!DOCTYPE html>
+<html>
+<head>
+  <title>Login Weiterleitung</title>
+  <script src="https://cdn.jsdelivr.net/npm/keycloak-js@24.0.1/dist/keycloak.min.js"></script>
+   <!--Skript wird parallel geladen, aber erst nach dem Parsen des Dokuments ausgeführt-->
+  <script src="index.js" defer></script>
+</head>
+<body>
+  <h1>Weiterleitung wird durchgeführt ....</h1>
+</body>
 </html>
