--- a/frontend/src/pages/provider/provider.html
+++ b/frontend/src/pages/provider/provider.html
@@ -4,6 +4,7 @@
 <head>
   <title>Provider</title>
   <script src="https://cdn.jsdelivr.net/npm/keycloak-js@24.0.1/dist/keycloak.min.js"></script>
+   <!--Skript wird parallel geladen, aber erst nach dem Parsen des Dokuments ausgeführt-->
   <script src="provider.js" defer></script>
 </head>
 <body>
