--- a/frontend/src/pages/user/user.html
+++ b/frontend/src/pages/user/user.html
@@ -3,7 +3,8 @@
 <head>
   <title>User</title>
   <script src="https://cdn.jsdelivr.net/npm/keycloak-js@24.0.1/dist/keycloak.min.js"></script>
-  <script src="user.js" defer></script>
+  <!--Skript wird parallel geladen, aber erst nach dem Parsen des Dokuments ausgeführt-->
+  <script src="user.js" defer></script> 
 </head>
 <body>
   <h1>User Bereich</h1>
