alle emojis ersetzt durch code

--- a/frontend/src/pages/container_upload.html
+++ b/frontend/src/pages/container_upload.html
@@ -18,12 +18,12 @@
     <h1 class="section-title">Wie möchten Sie Ihren Container bereitstellen?</h1>
     <div class="card-container">
       <div class="upload-card" onclick="showUploadOption('local')">
-        <div class="icon">📂</div>
+        <div class="icon">&#x1F4C1;</div>
         <h3>Lokal hochladen</h3>
         <p>Datei direkt vom Computer auswählen und hochladen.</p>
       </div>
       <div class="upload-card" onclick="showUploadOption('hub')">
-        <div class="icon">🐳</div>
+        <div class="icon">&#x1F40B;</div>
         <h3>Docker Hub Referenz</h3>
         <p>Einfach Image Name:Tag eingeben, z.&#8201;B. <code>nginx:latest</code>.</p>
       </div>
@@ -32,7 +32,7 @@
     <div id="upload-local" class="upload-section">
       <form id="local-upload-form">
         <div class="drop-zone" id="drop-local">
-          <span>📂 Container (.tar) hierher ziehen oder klicken</span>
+          <span>&#x1F4C1; Container (.tar) hierher ziehen oder klicken</span>
           <input type="file" name="file" id="fileInput-local" accept=".tar" hidden />
         </div>
 
