--- a/frontend/src/pages/dashboard.html
+++ b/frontend/src/pages/dashboard.html
@@ -19,13 +19,13 @@
     <div class="dashboard-container vertical-layout">
       <div class="filter-controls">
         <select id="filterSelect">
-          <option value>🔽 Filtern nach...</option>
-          <option value="image_name">🔤 Name</option>
-          <option value="image_tag">🏷 Tag</option>
-          <option value="created_at">⏱ Hochgeladen am</option>
+          <option value>&#x2B07; Filtern nach...</option>
+          <option value="image_name"> Name</option>
+          <option value="image_tag"> Tag</option>
+          <option value="created_at"> Hochgeladen am</option>
         </select>
 
-        <input type="text" id="searchInput" placeholder="🔍 Suchbegriff eingeben..." />
+        <input type="text" id="searchInput" placeholder="&#x1F50E; Suchbegriff eingeben..." />
       </div>
       <div class="table-wrapper" id="ki-image-list">
         <p>Lade KI-Images...</p>
