--- a/frontend/src/pages/profil.html
+++ b/frontend/src/pages/profil.html
@@ -16,14 +16,14 @@
     <div class="profile-card">
       <h2>Profil bearbeiten</h2>
 
-      <button onclick="openModal('usernameModal')">🖊 Benutzername ändern</button>
-      <button onclick="openModal('emailModal')">📧 E-Mail ändern</button>
-      <button onclick="openModal('passwordModal')">🔑 Passwort ändern</button>
-      <button onclick="openModal('deleteModal')" class="danger">🗑 Account löschen</button>
+      <button onclick="openModal('usernameModal')"> Benutzername ändern</button>
+      <button onclick="openModal('emailModal')"> E-Mail ändern</button>
+      <button onclick="openModal('passwordModal')"> Passwort ändern</button>
+      <button onclick="openModal('deleteModal')" class="danger">&#128465;&#65039; Account löschen</button>
     </div>
   </main>
 
-  <!-- 🔽 Modale Fenster -->
+  <!--  Modale Fenster -->
   <div class="modal" id="usernameModal">
     <div class="modal-content">
       <h3>Benutzername ändern</h3>
@@ -53,7 +53,7 @@
   <div class="modal" id="deleteModal">
     <div class="modal-content">
       <h3>Möchtest du deinen Account wirklich löschen?</h3>
-      <button onclick="closeModal('deleteModal')">❌ Abbrechen</button>
+      <button onclick="closeModal('deleteModal')">&#10060; Abbrechen</button>
       <button class="danger">Ja, löschen</button>
     </div>
   </div>
