--- a/frontend/src/pages/dicom_upload.html
+++ b/frontend/src/pages/dicom_upload.html
@@ -20,7 +20,7 @@
       <form id="dicom-form">
         <label for="dicom_file">DICOM Datei auswählen</label>
         <div class="drop-zone" id="drop-dicom">
-          <span id="dicom-drop-text">📂 DICOM-Datei hierher ziehen oder klicken</span>
+          <span id="dicom-drop-text">&#x1F4C1; DICOM-Datei hierher ziehen oder klicken</span>
           <input type="file" id="dicom_file" name="dicom_file" accept=".dcm" hidden/>
         </div>
         <button type="submit">Hochladen</button>
