--- a/frontend/src/pages/container_upload.html
+++ b/frontend/src/pages/container_upload.html
@@ -12,16 +12,21 @@
 </head>
 
 <body>
+  <!-- Navigation (per JavaScript dynamisch eingefügt) -->
   <div id="navbar"></div>
 
   <main>
+    <!-- Überschrift für die Upload-Auswahl -->
     <h1 class="section-title">Wie möchten Sie Ihren Container bereitstellen?</h1>
+    <!-- Zwei Optionen: Lokal hochladen oder über Docker Hub -->
     <div class="card-container">
+      <!-- Karte für lokalen Upload -->
       <div class="upload-card" onclick="showUploadOption('local')">
         <div class="icon">&#x1F4C1;</div>
         <h3>Lokal hochladen</h3>
         <p>Datei direkt vom Computer auswählen und hochladen.</p>
       </div>
+      <!-- Karte für Docker Hub Upload -->
       <div class="upload-card" onclick="showUploadOption('hub')">
         <div class="icon">&#x1F40B;</div>
         <h3>Docker Hub Referenz</h3>
@@ -29,36 +34,44 @@
       </div>
     </div>
 
+    <!-- Bereich für lokalen Upload (.tar-Dateien) -->
     <div id="upload-local" class="upload-section">
       <form id="local-upload-form">
+        <!-- Drag-and-Drop-Zone für Dateien -->
         <div class="drop-zone" id="drop-local">
           <span>&#x1F4C1; Container (.tar) hierher ziehen oder klicken</span>
           <input type="file" name="file" id="fileInput-local" accept=".tar" hidden />
         </div>
 
+        <!-- Hochladen-Button -->
         <button type="submit">Hochladen</button>
+        <!-- Upload-Statusmeldung -->
         <div id="local-status" class="upload-status"></div>
+        <!-- Fortschrittsbalken -->
         <progress id="local-progress" value="0" max="100" style="width: 100%; display: none;"></progress>
       </form>
     </div>
 
+    <!-- Bereich für Docker Hub Referenz-Upload -->
     <div id="upload-hub" class="upload-section">
       <form id="hub-upload-form">
+        <!-- Eingabefeld für Image-Referenz -->
         <input type="text" name="image_reference" placeholder="Image Name:Tag (z. B. nginx:latest)" required />
         <button type="submit">Referenzieren</button>
         <div id="hub-status" class="upload-status"></div>
       </form>
     </div>
   </main>
-
+  <!-- Fußzeile -->
   <footer>&copy; mRay AIR</footer>
-
+  <!-- Script zur Steuerung der Ansicht (welche Upload-Option sichtbar ist) -->
   <script>
     function showUploadOption(type) {
       document.getElementById("upload-local").style.display = type === "local" ? "flex" : "none";
       document.getElementById("upload-hub").style.display = type === "hub" ? "flex" : "none";
     }
   </script>
+  <!-- JavaScript für Upload-Logik und globale Funktionen -->
   <script src="../scripts/container_upload.js"></script>
   <script src="../scripts/global_script.js"></script>
 
