--- a/frontend/src/pages/dicom_upload.html
+++ b/frontend/src/pages/dicom_upload.html
@@ -16,14 +16,18 @@
   <main>
     <h1 class="section-title">DICOM-Datei hochladen</h1>
 
+    <!-- Formularbereich für DICOM-Upload -->
     <div class="form-container">
       <form id="dicom-form">
         <label for="dicom_file">DICOM Datei auswählen</label>
+        <!-- Drag-and-Drop-Zone für die Datei -->
         <div class="drop-zone" id="drop-dicom">
           <span id="dicom-drop-text">&#x1F4C1; DICOM-Datei hierher ziehen oder klicken</span>
           <input type="file" id="dicom_file" name="dicom_file" accept=".dcm" hidden/>
         </div>
+        <!-- Upload-Button -->
         <button type="submit">Hochladen</button>
+        <!-- Bereich für Upload-Statusmeldungen -->
         <div id="dicom-status" class="upload-status"></div>
       </form>
     </div>
@@ -32,6 +36,7 @@
     <h2 class="section-subtitle hidden" id="ki-title">Vorgeschlagene KI-Systeme</h2>
     <div class="ki-list hidden" id="ki-list"></div>
 
+    <!-- Bereich für KI-Ausgabe (diagnostische Rückmeldung) -->
     <div id="ai-result" class="ai-result hidden">
       <h2>Antwort der KI</h2>
       <pre id="result-content">{"diagnose": "Keine Auffälligkeiten festgestellt."}</pre>
@@ -40,8 +45,8 @@
 
   <footer>© mRay</footer>
 
-  <script src="../scripts/dicom_upload.js"></script>
-  <script src="../scripts/global_script.js"></script>
+  <script src="../scripts/dicom_upload.js"></script><!-- Logik für den Upload -->
+  <script src="../scripts/global_script.js"></script><!-- Gemeinsame Skripte für die gesamte Seite -->
  
 </body>
 
