--- a/frontend/src/pages/container_upload.html
+++ b/frontend/src/pages/container_upload.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Container hochladen – mRay AIR</title>
-
+  <!-- Keycloak + Auth Schutz -->
+  <script src="https://cdn.jsdelivr.net/npm/keycloak-js@24.0.1/dist/keycloak.min.js"></script>
+  <script src="../scripts/auth.js" defer></script>
   <link rel="stylesheet" href="../styles/global_style.css" />
   <link rel="stylesheet" href="../styles/container_upload.css" />
 
@@ -60,7 +62,6 @@
     }
   </script>
   <script src="../scripts/container_upload.js"></script>
-  <script src="../scripts/global_script.js"></script>
 
 </body>
 
