--- a/frontend/src/pages/dashboard.html
+++ b/frontend/src/pages/dashboard.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>mRay Dashboard</title>
-  
+  <!-- Keycloak + Auth Schutz -->
+  <script src="https://cdn.jsdelivr.net/npm/keycloak-js@24.0.1/dist/keycloak.min.js"></script>
+  <script src="../scripts/auth.js" defer></script>
   <link rel="stylesheet" href="../styles/global_style.css" />
   <link rel="stylesheet" href="../styles/dashboard.css" />
 </head>
@@ -42,7 +44,6 @@
   <footer>© mRay</footer>
 
   <script src="../scripts/dashboard.js?v=20250517"></script>
-  <script src="../scripts/global_script.js"></script>
 
 </body>
 
