englisch-deutsch (noch nicht ganz funktionsfähig)

--- a/frontend/src/pages/container_upload.html
+++ b/frontend/src/pages/container_upload.html
@@ -72,8 +72,9 @@
     }
   </script>
   <!-- JavaScript für Upload-Logik und globale Funktionen -->
-  <script src="../scripts/container_upload.js"></script>
   <script src="../scripts/global_script.js"></script>
+  <script src="../scripts/navbar.js"></script> <!--skript navbar logik-->
+  <script src="../scripts/container_upload.js"></script>
 
 </body>
 
