--- a/frontend/src/pages/dashboard.html
+++ b/frontend/src/pages/dashboard.html
@@ -46,10 +46,11 @@
   </main>
 
   <footer>© mRay</footer>
-
-  <script src="../scripts/dashboard.js?v=20250517"></script> 
+  
   <script src="../scripts/global_script.js"></script>
-
+  <script src="../scripts/navbar.js"></script> <!--skript navbar logik-->
+  <script src="../scripts/dashboard.js?v=20250517"></script> 
+  
 </body>
 
 </html>
