--- a/frontend/src/pages/dicom_upload.html
+++ b/frontend/src/pages/dicom_upload.html
@@ -44,10 +44,11 @@
   </main>
 
   <footer>© mRay</footer>
-
-  <script src="../scripts/dicom_upload.js"></script><!-- Logik für den Upload -->
+  
   <script src="../scripts/global_script.js"></script><!-- Gemeinsame Skripte für die gesamte Seite -->
- 
+  <script src="../scripts/navbar.js"></script> <!--skript navbar logik-->
+  <script src="../scripts/dicom_upload.js"></script><!-- Logik für den Upload -->
+
 </body>
 
 </html>
