--- a/frontend/src/pages/dashboard.html
+++ b/frontend/src/pages/dashboard.html
@@ -1,55 +1,45 @@
 <!DOCTYPE html>
 <html lang="de">
-
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>mRay Dashboard</title>
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title data-i18n-key="navbar_dashboard">mRay Dashboard</title>
+
   <link rel="stylesheet" href="../styles/global_style.css" />
   <link rel="stylesheet" href="../styles/dashboard.css" />
 </head>
-
 <body>
-  <!-- Navigation wird per JavaScript dynamisch geladen -->
   <div id="navbar"></div>
-  
-  <main>
-    <!-- Hauptüberschrift der Seite -->
-    <h1 class="section-title">KI-Images</h1>
 
-    <!-- Container für Filter, Tabelle und Zusatzinformationen -->
+  <main>
+    <h1 class="section-title" data-i18n-key="dashboard_title">KI-Images</h1>
+
     <div class="dashboard-container vertical-layout">
-      <!-- Filterleiste oben mit Dropdown und Texteingabe -->
       <div class="filter-controls">
         <select id="filterSelect">
-          <option value>&#x2B07; Filtern nach...</option>
-          <option value="image_name"> Name</option>
-          <option value="image_tag"> Tag</option>
-          <option value="created_at"> Hochgeladen am</option>
+          <option value="" data-i18n-key="dashboard_filter_option">🔽 Filtern nach...</option>
+          <option value="image_name" data-i18n-key="dashboard_filter_name">Name</option>
+          <option value="image_tag" data-i18n-key="dashboard_filter_tag">Tag</option>
+          <option value="created_at" data-i18n-key="dashboard_filter_created">Hochgeladen am</option>
         </select>
-        <!-- Texteingabefeld zur Live-Suche -->
-        <input type="text" id="searchInput" placeholder="&#x1F50E; Suchbegriff eingeben..." />
-      </div>
-      <!-- Platzhalter für dynamisch generierte Tabelle -->
-      <div class="table-wrapper" id="ki-image-list">
-        <p>Lade KI-Images...</p>
+        <input type="text" id="searchInput" placeholder="🔎 Suchbegriff eingeben..." data-i18n-key-placeholder="dashboard_search_placeholder" />
       </div>
 
-       <!-- Informationsbox rechts oder unterhalb der Tabelle -->
+      <div class="table-wrapper" id="ki-image-list">
+        <p data-i18n-key="loading_ki_images">Lade KI-Images...</p>
+      </div>
+
       <div class="details-card">
-        <h2>Info</h2>
-        <p>Hier erscheinen alle hochgeladenen KI-Images.</p>
+        <h2 data-i18n-key="info_title">Info</h2>
+        <p data-i18n-key="info_text">Hier erscheinen alle hochgeladenen KI-Images.</p>
       </div>
     </div>
-
   </main>
 
   <footer>© mRay</footer>
 
-  <script src="../scripts/dashboard.js?v=20250517"></script> 
+  <script src="../scripts/i18n.js"></script>
   <script src="../scripts/global_script.js"></script>
-
+  <script src="../scripts/dashboard.js?v=20250517"></script>
 </body>
-
 </html>
