änderung log frontend

--- a/frontend/src/pages/dashboard.html
+++ b/frontend/src/pages/dashboard.html
@@ -39,8 +39,13 @@
       <div class="details-card">
         <h2 data-i18n-key="info_title">Info</h2>
         <p data-i18n-key="info_text">Hier erscheinen alle Logs der KI-Images.</p>
+      
+        <!-- NEU: Container für Logs -->
+        <pre id="system-log-output"
+              style="max-height: 200px; overflow-y: auto; background-color: #1c1c1c; color: #00ffcc;
+                     padding: 1rem; font-size: 0.85rem; border: 1px solid #444; border-radius: 6px;">
+        </pre>
       </div>
-
     </div>
   </main>
 
