--- a/frontend/src/pages/dashboard.html
+++ b/frontend/src/pages/dashboard.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>mRay Dashboard</title>
-  <!-- Keycloak + Auth Schutz -->
   <script src="https://cdn.jsdelivr.net/npm/keycloak-js@24.0.1/dist/keycloak.min.js"></script>
   <script src="../scripts/auth.js" defer></script>
   <link rel="stylesheet" href="../styles/global_style.css" />
@@ -41,13 +40,53 @@
       <div class="details-card">
         <h2 data-i18n-key="info_title">Info</h2>
         <p data-i18n-key="info_text">Hier erscheinen alle Logs der KI-Images.</p>
-      
-        <!-- NEU: Container für Logs -->
+
+        <!-- 🆕 Log ayarları -->
+        <div style="margin-bottom: 0.5rem;">
+          <label for="log-count" data-i18n-key="log_count_label">Log-Zeilen:</label>
+          <input type="number" id="log-count" value="20" min="1" max="500" style="width: 60px;" />
+          <button id="refresh-logs" data-i18n-key="refresh_button">🔄 Aktualisieren</button>
+        </div>
+
+        <!-- Log alanı -->
         <pre id="system-log-output"
               style="max-height: 200px; overflow-y: auto; background-color: #1c1c1c; color: #00ffcc;
                      padding: 1rem; font-size: 0.85rem; border: 1px solid #444; border-radius: 6px;">
         </pre>
       </div>
+
+      <!-- ⬇️ YENİ EKLENEN LOG VIEWER BLOĞU -->
+      <div class="details-card">
+        <h2 data-i18n-key="logviewer_title">Log-Viewer</h2>
+        <p data-i18n-key="logviewer_text">Hier kannst du Logs eines bestimmten Containers anzeigen.</p>
+
+        <div style="margin-bottom: 1rem;">
+          <label for="container-select">Container auswählen:</label>
+          <select id="container-select"></select>
+        </div>
+
+        <div style="margin-bottom: 1rem;">
+          <strong>Status:</strong> <span id="container-status">-</span> |
+          <strong>Health:</strong> <span id="container-health">-</span>
+        </div>
+
+        <div style="margin-bottom: 1rem;">
+          <label><input type="checkbox" id="chk-stdout" checked> STDOUT</label>
+          <label><input type="checkbox" id="chk-stderr" checked> STDERR</label>
+          <label><input type="checkbox" id="chk-timestamps"> Zeitstempel</label>
+          <label>Zeilen:
+            <input type="number" id="log-tail" value="100" min="10" max="1000" step="10" style="width: 80px;">
+          </label>
+          <button onclick="loadLogs()">Logs laden</button>
+        </div>
+
+        <!-- Log-Ausgabe -->
+        <pre id="log-output"
+              style="max-height: 300px; overflow-y: auto; background-color: #1c1c1c; color: #00ffcc;
+                     padding: 1rem; font-size: 0.85rem; border: 1px solid #444; border-radius: 6px;">
+        </pre>
+      </div>
+      <!-- ⬆️ SON -->
     </div>
   </main>
 
@@ -55,8 +94,7 @@
 
   <script src="../scripts/i18n.js"></script>
   <script src="../scripts/global_script.js"></script>
-  <script src="../scripts/dashboard.js?v=20250517"></script>
-
+  <script src="../scripts/dashboard.js?v=20250602"></script>
 </body>
 
 </html>
