--- a/frontend/src/pages/dicom_upload.html
+++ b/frontend/src/pages/dicom_upload.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title data-i18n-key="navbar_dicom_upload">DICOM Upload – mRay AIR</title>
+  <!-- i18next + Plugins einbinden -->
+  <script src="https://unpkg.com/i18next@23.6.16/i18next.min.js"></script>
+  <script src="https://unpkg.com/i18next-browser-languagedetector/i18nextBrowserLanguageDetector.min.js"></script>
+  <script src="https://unpkg.com/i18next-http-backend/i18nextHttpBackend.min.js"></script>
 
   <link rel="stylesheet" href="../styles/global_style.css" />
   <link rel="stylesheet" href="../styles/dicom_upload.css" />
@@ -18,7 +22,7 @@
       <form id="dicom-form">
         <label for="dicom_file" data-i18n-key="dicom_select_file">DICOM Datei auswählen</label>
         <div class="drop-zone" id="drop-dicom">
-          <span id="dicom-drop-text" data-i18n-key="dicom_drop_zone_span">&#x1F4C1; DICOM-Datei hierher ziehen oder klicken</span>
+          <div id="drop-dicom" class="drop-area"></div>
           <input type="file" id="dicom_file" name="dicom_file" accept=".dcm" hidden/>
         </div>
         <button type="submit" data-i18n-key="dicom_upload_button">Hochladen</button>
