englisch deutsch fertig

--- a/frontend/src/pages/container_upload.html
+++ b/frontend/src/pages/container_upload.html
@@ -34,7 +34,7 @@
     <div id="upload-local" class="upload-section">
       <form id="local-upload-form">
         <div class="drop-zone" id="drop-local">
-          <span data-i18n-key="drop_zone_text">&#x1F4C1; Container (.tar) hierher ziehen oder klicken</span>
+          <span id="drop-zone-label" data-i18n-key="container_upload_drag_drop_local">&#x1F4C1; Container (.tar) hierher ziehen oder klicken</span>
           <input type="file" name="file" id="fileInput-local" accept=".tar" hidden />
         </div>
         <button type="submit" data-i18n-key="upload_button">Hochladen</button>
